--- a/index.html
+++ b/index.html
@@ -147,10 +147,10 @@
                 <div class="col-sm-12 col-md-4 col-lg-3">
                     <h4>Social</h4>
                     <ul class="list-group">
-                        <a href="https://www.facebook.com" target="_blank"> <li>Facebook</li></a>
-                        <a href="https://www.twitter.com" target="_blank"> <li>Twitter</li></a>
-                        <a href="https://www.youtube.com" target="_blank"> <li>Youtube</li></a>
-                        <a href="https://www.instagram.com" target="_blank"> <li>Instagram</li></a>
+                        <a href="#"> <li>Facebook</li></a>
+                        <a href="#"> <li>Twitter</li></a>
+                        <a href="#"> <li>Youtube</li></a>
+                        <a href="#"> <li>Instagram</li></a>
                     </ul>
 
                 </div>
